# langgraph-template

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  base.py
api/: __init__.py  models.py
api/v1/: __init__.py  routes.py
config/: __init__.py  settings.py
data/: collections.json
docs/: GOLDEN_RULES.md  LANGGRAPH_BEST_PRACTICES.md  USAGE_GUIDE.md
graph/: __init__.py  builder.py  state.py
guardrails/: __init__.py  base.py  builtin.py
llm/: __init__.py  vllm_client.py
observability/: __init__.py  langfuse_manager.py
retrieval/: README.md  __init__.py  embeddings.py  milvus_client.py  rag.py
tests/: __init__.py  test_agents.py
tools/: __init__.py  base.py
tools/builtin/: __init__.py  example_tools.py
