[project]
name = "langgraph-framework"
version = "0.1.0"
description = "Modular LangGraph Agentic Framework with vLLM, Langfuse, and Milvus support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core LangGraph & LangChain (Updated for LangGraph 1.0.x - January 2026)
    "langgraph>=1.0.6",
    "langgraph-prebuilt>=1.0.6",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-sqlite>=3.0.2",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    
    # Observability
    "langfuse>=3.0.0",
    
    # Vector Store
    "pymilvus>=2.4.0",
    
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Async utilities
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
